--- a/style.css
+++ b/style.css
@@ -52,9 +52,7 @@ button {
 h2 {
 	color: #1F1F3D;
 	font-size: 25px;
-	align-items: center;
-	padding-left: 5%;
-	padding-bottom: 5%;
+	padding: 5%
 }
 
 .nav {
@@ -109,25 +107,9 @@ h2 {
 	flex-direction: column;
 	border: 1px solid #FFC30C;
 	width: 30%;
-	height: 40%;
+	height: 45%;
 	margin: 2%;
 	background-color: #FFE89D;
-}
-
-.task__card_urgent {
-	color: #B23A25;
-	background-color: #FFE89D;
-	width: 20%;
-	height: 20%;
-	padding: 5%;
-}
-
-.task__card_delete {
-	color: #1F1F3D;
-	background-color: #FFE89D;
-	width: 20%;
-	height: 20%;
-	padding: 5%;
 }
 
 .task__card_check {
@@ -146,6 +128,8 @@ h2 {
 	justify-content: space-around;
 	margin-top: auto;
 	border-top: 1px solid #FFC30C;
+	width: 85%;
+  margin-left: 2%;
 }
 
 .task__card_task_container {
@@ -224,10 +208,30 @@ h2 {
 .task__card_urgent,
 .task__card_delete {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+	color: #1F1F3D;
+	background-color: #FFE89D;
+	width: 20%;
+	height: 20%;
+	padding: 10%;
+	margin: 5%;
+	border: 0;
 }
 
 .task__card_delete_icon,
 .task__card_urgent_icon {
-	width: 100%;
+	width: 50%;
+	height: 25px;
+}
+
+.urgent__text {
+	padding: 2%;
+  font-size: 12px;
+  margin-left: -25%;
+}
+
+.delete__text {
+	padding: 10%;
+  font-size: 12px;
+  margin-left: -25%;
 }
