--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ h2 {
 	flex-direction: column;
 	border: 1px solid #FFC30C;
 	width: 30%;
-	height: 45%;
+	height: 60%;
 	margin: 2%;
 	background-color: #FFE89D;
 }
@@ -160,14 +160,12 @@ h2 {
 	flex-direction: row;
 	align-items: center;
 	height: 35px;
-  margin: 5% 0;
+  margin: 7% 0;
 }
 
 .nav__exit_btn {
    width: 10%;
    margin-right: 2%;
-   border-radius: 100%;
-   height: 25px;
    background-color: #587A8A;
    border: 0;
 }
@@ -175,6 +173,7 @@ h2 {
 .nav__temp_task {
 	font-size: 20px;
 	color: #FFFFFF;
+	width: 90%;
 }
 
 .nav__exit_icon {
@@ -234,4 +233,8 @@ h2 {
 	padding: 10%;
   font-size: 12px;
   margin-left: -25%;
+}
+
+.task__list_item {
+	width: 100%;
 }
