--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ h2 {
 	margin-top: 16px;
 	border-left: 0;
 	padding: 3%;
+	border-radius: 0
 }
 
 .header__search_icon {
@@ -132,15 +133,16 @@ h2 {
 	flex-direction: row;
 	justify-content: space-around;
 	margin-top: auto;
-	border-top: 2px solid #C7D3D8;
 	width: 100%;
+	padding-top: 3%;
 }
 
-.task__card_task_container {
+.task__card_body_container {
 	display: flex;
 	flex-direction: row;
-	padding: 5%;
+	padding: 3% 0;
 	border-top: 2px solid #C7D3D8;
+	border-bottom: 2px solid #C7D3D8;
 }
 
 .nav__task_container {
@@ -168,13 +170,6 @@ h2 {
   margin: 7% 0;
 }
 
-.nav__exit_btn {
-   width: 10%;
-   margin-right: 2%;
-   background-color: #587A8A;
-   border: 0;
-}
-
 .nav__temp_task {
 	font-size: 20px;
 	color: #FFFFFF;
@@ -182,7 +177,8 @@ h2 {
 }
 
 .nav__exit_icon {
-	width: 100%;
+	width: 8%;
+  padding: 3%;
 }
 
 .nav__urgency_filter {
@@ -199,43 +195,60 @@ h2 {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	color: #1F1F3D;
 }
 
 .task__card_check_icon {
-	width: 60%;
+	width: 8%;
+	padding: 5%;
 }
 
 .task__card_urgent,
 .task__card_delete {
-	display: flex;
-	flex-direction: column;
-	color: #1F1F3D;
-	background-color: #FAFDFF;
-	width: 20%;
-	border: 0;
-	padding: 0;
-	margin-bottom: 0;
+
 }
 
 .task__card_delete_icon,
 .task__card_urgent_icon {
-	width: 50%;
+	width: 35%;
 	height: 25px;
 }
 
 .urgent__text,
 .delete__text {
-	padding: 2%;
   font-size: 12px;
-  margin-left: -15%;
   color: #3C6567;
-}
-
-.task__list_item {
-	width: 100%;
-	color: #1F1F3D;
 }
 
 .card__task_italic {
 	font-style: italic;
+	color: #3C6577;
+}
+
+.task__urgent {
+	display: inline-block;
+	border: 2px solid #FFC30C;
+	padding: 5px;
+	width: 90%;
+	margin: 5% 0 0 5%;
+	background-color: #FFE89D;
+	box-sizing: border-box;
+}
+
+.task__urgent_body {
+	display: flex;
+	flex-direction: row;
+	padding: 3% 0;
+	border-top: 2px solid #FFC30C;
+	border-bottom: 2px solid #FFC30C;
+}
+
+.task__urgent_text {
+	font-size: 12px;
+  color: #B23A25;
+}
+
+.task__urgent_delete {
+	font-size: 12px;
+  color: #1F1F3D;
 }
